Fix: problema problema con los ambitos despues de multiples llamadas a metodos o funciones en java